# KiwiCubed

./: .clang-format  .clangd  .gitattributes  .gitignore  3D Test.sln  3D Test.vcxproj  3D Test.vcxproj.filters  BuildMods.ps1  CMakeLists.txt  CleanMods.ps1  Justfile  Justfile.old  KiwiCubed.filters  KiwiCubed.sln  KiwiCubed.vcxproj  LICENSE.md  README.md  compile_commands.json  flake.nix  imgui.ini  init_config.json  meson.build  native_64.ini  result
Assets/: kiwi_itch_logo.aseprite
BuildDebug/: CMakeCache.txt
Deprecated/: BlockOld.cpp  BlockOld.h  ChunkOld.cpp  ChunkOld.h
Libs/glad/: CMakeLists.txt  glad.c  glad.h
Libs/klogger/: CMakeLists.txt
Libs/kwport/: CMakeLists.txt
Mods/: readthis.txt
Mods/kiwicubed/: mod.json
Mods/kiwicubed WIP/: mod.json
Mods/kiwicubed WIP/Resources/Shaders/: Terrain_Fragment.frag  Wireframe_Fragment.frag  Wireframe_Vertex.vert
Mods/kiwicubed/Resources/Blocks/: blocks.json
Mods/kiwicubed/Resources/Entities/: dropped_item.json
Mods/kiwicubed/Resources/Models/: dropped_item.json
Mods/kiwicubed/Resources/Shaders/: ChunkDebug_Fragment.frag  ChunkDebug_Vertex.vert  Entity_Fragment.frag  Entity_Vertex.vert  Terrain_Fragment.frag  Terrain_Vertex.vert  Text_Fragment.frag  Text_Vertex.vert  UI_Fragment.frag  Wireframe_Fragment.frag
Mods/kiwicubed/Resources/Textures/: terrain_atlas.json  ui_atlas.json
Mods/kiwicubed/Scripts/: as.predefined  mod.as  mod.cpp
Mods/kiwicubed/Shaders/: ChunkDebug_Fragment.frag  ChunkDebug_Vertex.vert  Terrain_Fragment.frag  Terrain_Vertex.vert  UI_Fragment.frag  UI_Vertex.vert  Wireframe_Fragment.frag  Wireframe_Vertex.vert
Mods/kiwicubed/Textures/Blocks/: stone_1.aseprite
Resources/Data/: funky.json
Resources/Shaders/: ChunkDebug_Fragment.frag  ChunkDebug_Vertex.vert  Fragment.frag  Terrain_Fragment.frag  Terrain_Vertex.vert  Vertex.vert  Wireframe_Fragment.frag  Wireframe_Vertex.vert
Source/: AppIcon.rc  AssetDefinitions.h  AssetManager.cpp  AssetManager.h  Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkHandler.cpp  ChunkHandler.h  DataPanel.h  DebugRenderer.cpp  DebugRenderer.h  Entity.cpp  Entity.h  EventDefinitions.h  Events.cpp  Events.h  ExposedModAPI.cpp  ExposedModAPI.h  GLError.h  GenerateAngelScriptLanguageData.cpp  Globals.cpp  Globals.h  IndexBufferObject.cpp  IndexBufferObject.h  Input.cpp  Input.h  KiwiCubed.cpp  KiwiCubed.h  Main.cpp  ModHandler.cpp  ModHandler.h  Physics.cpp  Physics.h  Player.cpp  Player.h  Renderer.cpp  (+25 more)
Source/GPUObjects/: IndexBufferObject.h  VertexBufferObject.cpp  VertexBufferObject.h
Source/Rendering/: Camera.cpp  Camera.h  DebugRenderer.cpp  DebugRenderer.h  GLError.cpp  GLError.h  GLTypes.h  IncludeGL.h  RenderThread.cpp  RenderThread.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h
Source/World/: Block.cpp  Block.h  BlockManager.cpp  Chunk.cpp  ChunkHandler.cpp  ChunkHandler.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Inventory.cpp  Inventory.h  Physics.cpp  Physics.h  Player.cpp  Player.h  SingleplayerHandler.cpp  SingleplayerHandler.h  World.cpp  World.h
Source/pch/: pch.h
Source/rendering/: Camera.cpp  DebugRenderer.cpp  DebugRenderer.h  Shader.cpp  Texture.cpp  Texture.h
Source/world/: Block.cpp  Block.h  Chunk.cpp  ChunkHandler.cpp  ChunkHandler.h  Physics.cpp  Physics.h  World.cpp  World.h
src/: Block.h  Camera.h  ChunkHandler.cpp  ChunkHandler.h  DebugRenderer.h  Entity.h  GLError.h  Input.cpp  Main.cpp  Player.h  Renderer.h  Shader.cpp  Shader.h  SingleplayerHandler.cpp  SingleplayerHandler.h  Texture.cpp  Texture.h  VertexArrayObject.h  Window.h  World.h
subprojects/: FastNoise.wrap  GLAD.wrap  egl-registry.wrap  freetype.wrap  glad-gl.wrap  imgui.wrap  json.wrap  klogger.wrap  kwport.wrap  libpng.wrap  log4kwc.wrap  stb.wrap  tracy.wrap  zlib.wrap
subprojects/FastNoise/: meson.build
subprojects/GLAD/: glad.c  glad.h  meson.build
subprojects/klogger/: klogger.cpp  klogger.hpp  meson.build  meson.options
subprojects/kwport/: meson.build
subprojects/kwport/include/: index_vector.hpp
subprojects/log4kwc/: log4kwc.cpp  log4kwc.hpp  meson.build
subprojects/packagefiles/freetype-2.13.3/: meson.build
subprojects/packagefiles/glad-gl-3.3-compatibility/: meson.build
subprojects/stb/: meson.build
